--- a/Makefile.mswin-mingw32
+++ b/Makefile.mswin-mingw32
@@ -1,13 +1,7 @@
 # For vim: set makeprg=mingw32-make\ -f\ Makefile.mswin-mingw32
 
+include Makefile.linux-mingw32
+
 CC=gcc
-TARGET=test-mswin-setmode
-CFLAGS=-Wall -g
 RM:=del
-
-$(TARGET).exe: $(TARGET).c
-	$(CC) $(CFLAGS) $^ -o $@
-
-clean:
-	$(RM) $(TARGET).exe
 
